fix dark mode not working

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 /* root document */
 body {
-    @apply bg-white dark:bg-gray-900 text-gray-950 dark:text-white font-sans;
+    @apply bg-white dark:bg-gray-900 text-gray-950 dark:text-white font-sans transition-colors duration-300;
 }
